@@ -1,2 +1,40 @@
 # LibRawFX
 Integration of LibRaw library for Javafx. All raw formats can be loaded with the Image class and manipulated by Pixelwriter/Pixelreader. Limitation is that the image class only supports 8-bit color deph.
+
+# Usage
+Point to the maven coordinates:
+<dependency>
+    <groupId>org.librawfx</groupId>
+    <artifactId>LibRawFX</artifactId>
+    <version>1.0</version>
+</dependency>
+
+- In the Class where the start method is add as one of the first lines:
+     "RAWImageLoaderFactory.install();"
+- Add the following lines to your java config:
+     "--add-modules jdk.incubator.foreign -Dforeign.restricted=permit"
+     "--add-exports=javafx.graphics/com.sun.javafx.iio=org.librawfx"
+     "--add-exports=javafx.graphics/com.sun.javafx.iio.common=org.librawfx"
+- Module name: org.librawfx
+
+
+You can have a look into the class TestAPP.java to see how to use it, but generally just create an Image with the URL/stream and add it to the image view:
+Image img=new Image(initialFile.toURI().toURL().toString(), false);
+ImageView view = new ImageView();
+view.setFitHeight(200);
+view.setFitWidth(200);
+view.setPreserveRatio(true);
+stack.getChildren().add(view);
+view.setImage(img);
+
+# Compile yourself:
+- OpenJDKA/Adoptopenjdk 16 or newer
+- JavaFX 11 or newer (15 is recommended)
+- SET JAVA_HOME variable
+- Execute "maven clean install"
+- To run the example execute "maven javafx:run@cli-default"
+- IDE Integration: execute as a maven goal "javafx:run@ide-debug" or "javafx:run@ide-profile" 
+
+# Notes:
+- The lib is using unoffical JavaFX interfaces
+     
